--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
                 </div>
 
                 <div class="col-12  text-center">
-                    <div id="name" class="area">Gaurav</div>
+                    <div id="name" class="area">Vamsi</div>
                 </div>
 
                 <div class="col-12 text-center">
                     <div class="type-wrap">
                         <div id="typed-strings" class="typing">
-                            <h2>Happy Birthday <i id="nae">Gaurav</i></h2>
-                            <h2>Have a wonderful day</h2>
-                            <h2>Filled with joy and happiness.</h2>
+                            <h2>Have a wonderful day..</h2>
+                            <h2>Filled with joy and happiness!</h2>
                         </div>
                         <span id="typed" style="white-space:pre;"></span>
                     </div>
